crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.repro-preserve-memoization-inner-destructured-value-mistaken-as-dependency-mutated-dep/error.txt
Found 1 error:

Compilation Skipped: Existing memoization could not be preserved

React Compiler has skipped optimizing this component because the existing manual memoization could not be preserved. This dependency may be mutated later, which could cause the value to change unexpectedly.

error.repro-preserve-memoization-inner-destructured-value-mistaken-as-dependency-mutated-dep.ts:25:13
  23 |     const {value} = identity(input, x);
  24 |     return {value};
> 25 |   }, [input, x]);
     |              ^ This dependency may be modified later
  26 |   return object;
  27 | }
  28 |
